--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>rviz</build_depend>
   <build_depend>urdf</build_depend>
+  <build_depend>sensor_msgs</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>joint_state_publisher</run_depend>
@@ -25,5 +26,6 @@
   <run_depend>rospy</run_depend>
   <run_depend>rviz</run_depend>
   <run_depend>urdf</run_depend>
+  <run_depend>sensor_msgs</run_depend>
 
 </package>
