--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <build_depend>rviz</build_depend>
   <build_depend>urdf</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
 
   <run_depend>geometry_msgs</run_depend>
   <run_depend>joint_state_publisher</run_depend>
@@ -27,5 +28,6 @@
   <run_depend>rviz</run_depend>
   <run_depend>urdf</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>visualization_msgs</run_depend>
 
 </package>
